syntax = "proto3";
package newcase;

// Import
import "common.proto";

service CaseService {
    rpc getNewCaseByDepartment(CaseInput) returns (NewCases);
}

message CaseInput {
    string department = 1;
    common.CommonInput date = 2;
}

message CaseResult {
    string date = 1;
    int64 new_entry_hospital = 2;
    int64 new_entry_icu = 3;
    int64 death = 4;
    int64 back_home = 5;
}

message NewCases {
    repeated CaseResult cases = 1;
}
